# optional-cpp

./: CMakeLists.txt
include/tim/optional/: Optional.hpp
tests/optional/: fail.txt  test.txt
tests/optional/optional.bad_optional_access/: default.pass.cpp  derive.pass.cpp
tests/optional/optional.comp_with_t/: equal.pass.cpp  greater.pass.cpp  greater_equal.pass.cpp  less_equal.pass.cpp  less_than.pass.cpp  not_equal.pass.cpp
tests/optional/optional.hash/: enabled_hash.pass.cpp  hash.pass.cpp
tests/optional/optional.nullops/: equal.pass.cpp  greater.pass.cpp  greater_equal.pass.cpp  less_equal.pass.cpp  less_than.pass.cpp  not_equal.pass.cpp
tests/optional/optional.nullopt/: nullopt_t.fail.cpp  nullopt_t.pass.cpp
tests/optional/optional.object/: optional_requires_destructible_object.fail.cpp  special_members.pass.cpp  triviality.pass.cpp  types.pass.cpp
tests/optional/optional.object/optional.object.assign/: assign_value.pass.cpp  const_optional_U.pass.cpp  copy.pass.cpp  emplace.pass.cpp  emplace_initializer_list.pass.cpp  move.pass.cpp  nullopt_t.pass.cpp  optional_U.pass.cpp
tests/optional/optional.object/optional.object.ctor/: U.pass.cpp  const_T.pass.cpp  const_optional_U.pass.cpp  copy.pass.cpp  ctor.fail.cpp  deduct.fail.cpp  deduct.pass.cpp  default.pass.cpp  empty_in_place_t_does_not_clobber.pass.cpp  explicit_const_optional_U.pass.cpp  explicit_optional_U.pass.cpp  in_place_t.pass.cpp  initializer_list.pass.cpp  move.fail.cpp  move.pass.cpp  nullopt_t.pass.cpp  optional_U.pass.cpp  rvalue_T.pass.cpp
tests/optional/optional.object/optional.object.dtor/: dtor.pass.cpp
tests/optional/optional.object/optional.object.mod/: reset.pass.cpp
tests/optional/optional.object/optional.object.observe/: bool.pass.cpp  dereference.pass.cpp  dereference_const.pass.cpp  dereference_const_rvalue.pass.cpp  dereference_rvalue.pass.cpp  has_value.pass.cpp  op_arrow.pass.cpp  op_arrow_const.pass.cpp  value.pass.cpp  value_const.fail.cpp  value_const.pass.cpp  value_const_rvalue.pass.cpp  value_or.pass.cpp  value_or_const.pass.cpp  value_rvalue.pass.cpp
tests/optional/optional.object/optional.object.swap/: swap.pass.cpp
tests/optional/optional.relops/: equal.pass.cpp  greater_equal.pass.cpp  greater_than.pass.cpp  less_equal.pass.cpp  less_than.pass.cpp  not_equal.pass.cpp
tests/optional/optional.specalg/: make_optional.pass.cpp  make_optional_explicit.pass.cpp  make_optional_explicit_initializer_list.pass.cpp  swap.pass.cpp
tests/optional/optional.syn/: optional_in_place_t.fail.cpp  optional_includes_initializer_list.pass.cpp  optional_nullopt_t.fail.cpp
